# OryangBot-Cafeteria-Checker

./: .env  Cargo.toml  README.md  training_data_oryangbot.json
frontend/: package.json
migrations/2020-04-19-233634_get_cafeteria_data/: down.sql  up.sql
migrations/2020-04-25-113528_numerical_statement/: down.sql  up.sql
migrations/2020-04-25-114441_month_data/: down.sql  up.sql
src/: analyze_property.py  front.rs  lib.rs  main.rs  models.rs  nugu_api.rs  schema.rs  school_schedule_month.rs
static/css/: index.css
static/js/: error.js  getdata.js  numberdata.js  reactive.js
templates/: error.html.tera  index.html.tera
