[package]
name = "schoolwork"
version = "0.1.0"
authors = ["EscA <esca.phera@esphera.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
serde = { version = "*", features = ["derive"] }
regex = "*"
serde_json = "*"
serde_derive = "*"
dotenv = "*"
diesel = { version = "*", features = ["mysql", "chrono"] }
chrono = "*"
rocket-client-addr = "0.4.3"
tokio = { version = "*", features = ["full"] }
rand = "*"
reqwest = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera", "tera_templates"]
